added link add a review

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -5,8 +5,8 @@
 <div>
   <%= link_to "Edit this restaurant", edit_restaurant_path(@restaurant) %> |
   <%= link_to "Back to restaurants", restaurants_path %> |
-  <%= link_to 'Chef name', chef_restaurant_path(@restaurant)  %>
-
+  <%= link_to 'Chef name', chef_restaurant_path(@restaurant)  %> |
+  <%= link_to 'Leave a review', new_restaurant_review_path(@restaurant)  %>
   <%= button_to "Destroy this restaurant", @restaurant, method: :delete %>
 </div>
 
